--- a/src/app/pages/deal-create-page/deal-create-page.component.html
+++ b/src/app/pages/deal-create-page/deal-create-page.component.html
@@ -4,7 +4,7 @@
         Требуется авторизация
     </ng-container>
     <ng-container *ngIf="user">
-        <app-deal-create-form (onSubmitEvent)="handleSubmit($event)"></app-deal-create-form>
+        <app-deal-create-form (submitEvent)="handleSubmit($event)"></app-deal-create-form>
     </ng-container>
     
 </div>
