--- a/src/app/pages/deal-details-page/deal-details-page.component.html
+++ b/src/app/pages/deal-details-page/deal-details-page.component.html
@@ -35,7 +35,7 @@
             <app-proposal-creaete-form 
                 [dealId]="deal?.id" 
                 [hidden]="isProposalFormDisables"
-                (onProposalCreated)="onCreatedProposal.emit($event)"
+                (proposalCreated)="onCreatedProposal.emit($event)"
             >
         </app-proposal-creaete-form>
         </div>
