--- a/src/app/pages/deals-page/deals-page.component.scss
+++ b/src/app/pages/deals-page/deals-page.component.scss
@@ -1,6 +1,7 @@
 .deals-page {
 
     &__wrapper {
+        padding: 8px;
         display: grid;
         grid-template-columns: 1fr 3fr; 
         grid-template-rows: auto-fill;
