--- a/src/app/components/cards/profile-card/profile-card.component.scss
+++ b/src/app/components/cards/profile-card/profile-card.component.scss
@@ -11,6 +11,11 @@
         border-radius: 1rem;
     }
 
+    &__avatar {
+        max-width: 300px;
+        max-height: 2300x;
+    }
+
     &__login {
         font-weight: bold;
         font-size: $font-size-1;
@@ -20,6 +25,17 @@
     &__email {
         color: $font-color-secondary;
         font-size: $font-size-3;
+    }
+
+    &__footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 20px;
+
+        & input {
+            display: none;
+        }
     }
 
 }
