--- a/src/app/components/proposal-panel/proposal-panel.component.html
+++ b/src/app/components/proposal-panel/proposal-panel.component.html
@@ -4,8 +4,14 @@
         <button mat-raised-button routerLink="/user-proposals" color="primary">View</button>
     </div>
     <div class="proposal-panel__new">
-        new
-        <mat-icon  svgIcon="bell-icon" aria-hidden="false" aria-label="Count new proposal"></mat-icon>
+        <mat-icon 
+            svgIcon="ok-icon" 
+            aria-hidden="false" 
+            aria-label="Count new proposal"
+            matBadge="{{approvedProposalsCount}}" 
+            matBadgeColor="warn"
+        ></mat-icon>
+        Approved Proposals
     </div>
     <div class="proposal-panel__count">
         Total count : {{proposals?.length}}
