--- a/src/app/pages/user-proposals-page/user-proposals-page.component.html
+++ b/src/app/pages/user-proposals-page/user-proposals-page.component.html
@@ -1,5 +1,7 @@
-<app-proposal-card 
-    *ngFor="let proposal of proposals"
-    [proposal]="proposal"
->
-</app-proposal-card>
+<div class="user-proposals-page__wrapper">
+    <app-proposal-card 
+        *ngFor="let proposal of proposals"
+        [proposal]="proposal"
+    >
+    </app-proposal-card>
+</div>
