--- a/src/app/pages/deals-page/deals-page.component.html
+++ b/src/app/pages/deals-page/deals-page.component.html
@@ -7,7 +7,9 @@
         </app-search-tool>
     </div>
     <div class="deals-page__content">
-        <app-deal-card *ngFor="let deal of deals"
+        <app-deal-card 
+            routeTo="/deal-details" 
+            *ngFor="let deal of deals"
             [dealCard]="deal"
         >
         </app-deal-card>
