Добавил иконку сайта и изменил название ресурса

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -18,7 +18,10 @@
                 </div>
             </div>
             <div class="create-deal-section__btn">
-                <button mat-raised-button color="primary">
+                <button 
+                    mat-raised-button 
+                    color="primary"
+                    (click)="createBtnClick()">
                     Создать
                 </button>
             </div>
