--- a/src/app/components/cards/proposal-card/proposal-card.component.scss
+++ b/src/app/components/cards/proposal-card/proposal-card.component.scss
@@ -23,4 +23,10 @@
         font-size: $font-size-1;
         font-weight: bold;
     }
+
+    &__btns {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+    }
 }
