После подтверждения Отклика перенаправление на страницу Контактов

--- a/src/app/pages/proposals-on-deal-page/proposals-on-deal-page.component.html
+++ b/src/app/pages/proposals-on-deal-page/proposals-on-deal-page.component.html
@@ -3,4 +3,8 @@
         *ngFor="let proposal of proposals"
         [proposal]="proposal"
     ></app-proposal-card>
+
+    @if (proposals?.length === 0) {
+        <div class="proposals-on-deal-page__no-proposals">No proposals!</div>
+    }
 </div>
