--- a/src/app/components/main-footer/main-footer.component.scss
+++ b/src/app/components/main-footer/main-footer.component.scss
@@ -17,6 +17,15 @@
         gap: 20px;
     }
 
+    @media screen and (max-width: 768px) {
+        &__content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 20px;
+        }
+    }
+
     &__column {
 
 
