--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,9 +1,6 @@
 <div class="profile-page__wrapper">
    
-    <app-profile-card
-        login="Artem"
-        email="pCwJG@example.com"
-    >
+    <app-profile-card>
        <svg image xmlns="http://www.w3.org/2000/svg" width="240" height="240" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
           <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
         </svg>
@@ -38,7 +35,7 @@
       </ng-container>
     </div>
     <div>
-      3
+      
     </div>
     <div class="profile-page__panels">
       <app-proposal-panel></app-proposal-panel>
