--- a/src/app/components/profile-field/profile-field.component.scss
+++ b/src/app/components/profile-field/profile-field.component.scss
@@ -18,6 +18,16 @@
         padding: 10px;
     }
 
+    @media screen and (max-width: 768px) {
+        &__label {
+            text-transform: uppercase;
+            color: $color-primary;
+            font-size: $font-size-2;
+            font-weight: bold;
+            padding: 10px;
+        }
+    }
+
     &__content {
         
     }
