--- a/src/app/components/proposal-panel/proposal-panel.component.scss
+++ b/src/app/components/proposal-panel/proposal-panel.component.scss
@@ -3,7 +3,7 @@
 .proposal-panel {
     &__wrapper {
         display: grid;
-        grid-template-columns: 200px 200px;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: 50px 50px;
 
         padding: 8px;
