--- a/src/app/pages/deals-page/deals-page.component.scss
+++ b/src/app/pages/deals-page/deals-page.component.scss
@@ -7,6 +7,16 @@
         grid-template-rows: auto-fill;
     }
 
+    @media screen and (max-width: 768px) {
+        &__wrapper {
+            padding: 8px;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto; 
+            grid-template-rows: auto-fill;
+        }
+    }
+
     &__sidebar {
         
     }
