--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -6,9 +6,16 @@
         height: 100%;
         display: grid;
         grid-template-columns: 1fr 3fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr auto;
         gap: 10px;
         padding: 20px;
+    }
+
+    @media screen and (max-width: 768px) {
+        &__wrapper {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
     }
 
     &__content{
@@ -36,8 +43,17 @@
     }
 
     &__panels {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 10px;
     }
+}
+
+app-proposal-panel {
+    flex-grow: 1;
+}
+
+app-deal-panel {
+    flex-grow: 2;
 }
