--- a/src/app/pages/user-proposals-page/user-proposals-page.component.scss
+++ b/src/app/pages/user-proposals-page/user-proposals-page.component.scss
@@ -1,8 +1,31 @@
+@import "../../../shared/variables.scss";
+
 .user-proposals-page {
     &__wrapper {
         display: flex;
         flex-direction: column;
         gap: 10px;
         padding: 8px;
+    }
+
+    &__content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+    
+    @media screen and (max-width: 768px) {
+        &__content {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+    
+        }
+    }
+
+    &__title {
+        color: $color-primary;
+        font-size: $font-size-1;
+        font-weight: bold;
     }
 }
