--- a/src/app/pages/user-deals-page/user-deals-page.component.scss
+++ b/src/app/pages/user-deals-page/user-deals-page.component.scss
@@ -1,22 +1,26 @@
+@import "../../../shared/variables.scss";
+
 .user-deals-page {
 
     &__wrapper {
+        padding: 8px;
+    }
+
+    &__content {
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-rows: 1fr;
         gap: 20px;
 
-        padding: 8px;
     }
 
     @media screen and (max-width: 768px) {
-        &__wrapper {
+        &__content {
             display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: auto;
+            grid-template-columns: 1fr 3fr;
+            grid-template-rows: 1fr;
             gap: 20px;
     
-            padding: 8px;
         }
     }
 
@@ -24,7 +28,7 @@
         grid-area: 1 / 1 / 1 / 1;
     }
 
-    &__content {
+    &__deals-list {
         display: flex;
         flex-direction: column;
         gap: 10px;
