--- a/src/app/components/deal-panel/deal-panel.component.html
+++ b/src/app/components/deal-panel/deal-panel.component.html
@@ -1,5 +1,5 @@
 <div class="deal-panel__wrapper">
-    <div class="deal-panel__title">Your deals</div>
+    <div class="deal-panel__title">Your Deals</div>
     <div class="deal-panel__btn">
         <button mat-raised-button routerLink="/user-deals" color="primary">View</button>
     </div>
