--- a/src/app/components/cards/deal-card/deal-card.component.scss
+++ b/src/app/components/cards/deal-card/deal-card.component.scss
@@ -42,6 +42,12 @@
         }
     }
 
+    &__btns {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
     &__description {
         margin-bottom: 8px;
     }
