--- a/src/app/components/form/deal-create-form/deal-create-form.component.html
+++ b/src/app/components/form/deal-create-form/deal-create-form.component.html
@@ -82,6 +82,12 @@
             >
                 Min is 0
             </p>
+            <p errors 
+                *ngIf="dealCreateForm.errors?.['priceRange']
+                    && dealCreateForm.get('minPrice')?.touched"
+            >
+                Min must be less than max
+            </p>
         </app-form-input>
         <app-form-input
             formControlName="maxPrice"
@@ -108,6 +114,12 @@
                     && dealCreateForm.get('maxPrice')?.touched"
             >
                 Min is 0
+            </p>
+            <p errors 
+                *ngIf="dealCreateForm.errors?.['priceRange']
+                    && dealCreateForm.get('maxPrice')?.touched"
+            >
+                Max must be more than min
             </p>
             </app-form-input>
             <app-form-input
@@ -137,6 +149,7 @@
                     Min length is 3 symbols
                 </p>
             </app-form-input>
+            <label for="date">Aproximate date</label>
             <input type="date" formControlName="date">
             <app-category-input (toggleSelectionEvent)="toggleCategory($event)"></app-category-input>
         </div>
