--- a/src/app/components/cards/profile-card/profile-card.component.html
+++ b/src/app/components/cards/profile-card/profile-card.component.html
@@ -17,7 +17,7 @@
                 #fileInput
                 (change)="upload($event)" 
                 >
-            Загрузить
+            Upload
         </button>
         <button 
             mat-raised-button 
