--- a/src/app/pages/user-deals-page/user-deals-page.component.scss
+++ b/src/app/pages/user-deals-page/user-deals-page.component.scss
@@ -17,8 +17,8 @@
     @media screen and (max-width: 768px) {
         &__content {
             display: grid;
-            grid-template-columns: 1fr 3fr;
-            grid-template-rows: 1fr;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
             gap: 20px;
     
         }
