Изменил отступ и добавил валюту к Откликам

--- a/src/app/components/cards/deal-card/deal-card.component.scss
+++ b/src/app/components/cards/deal-card/deal-card.component.scss
@@ -28,8 +28,8 @@
 
     &__title {
         color: $color-primary;
-        margin-left: 10px;
         font-size: $font-size-1;
+        margin-bottom: 10px;
         font-weight: bold;
     }
 
